# TestFailureTriage

./: .env.example  .gitignore  AUTONOMOUS_REGRESSION_PLATFORM_ARCHITECTURE.md  AUTONOMOUS_REGRESSION_PLATFORM_STEPS.md  PLATFORM_CHARTER.md  README.md  pyproject.toml
examples/: failure_flaky.json  failure_real_defect.json  kpi_baseline_input.csv
src/defect_triage_agent/: __init__.py  cli.py  context.py  dashboard.py  dashboard_app.py  dashboard_data.py  flaky_detector.py  flaky_history.py  graph.py  kpi_targets.py  llm.py  models.py  state.py  ticketing.py
tests/: test_dashboard_data.py  test_flaky_detector.py  test_flaky_history.py  test_graph.py
